tests/negative/gold/constructor-prefix-test.gold
tests/negative/constructor-prefix-test.toit:9:18: error: Can't use prefix 'core' as an expression
  constructor: x=core
                 ^~~~
tests/negative/constructor-prefix-test.toit:10:22: error: Can't use prefix 'core' as an expression
  constructor.named: core
                     ^~~~
Compilation failed
